[package]
name = "openvm-18"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm = {git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0" }
openvm-ecc-sw-macros = {git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0" }
openvm-algebra-moduli-macros = {git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0"  }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0", features = ["p256"]  }

num-bigint = { version = "0.4.6", default-features = false }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1", default-features = false }
