[package]
name = "openvm-21"
version = "0.1.0"
edition = "2024"

[dependencies]
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0-rc.0", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.0.0-rc.0", default-features = false }

openvm = {git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0" }
openvm-circuit = {git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0" }
openvm-circuit-primitives = {git = "https://github.com/openvm-org/openvm.git", tag = "v1.0.0-rc.0", default-features = false }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }

serde_json = "1.0.117"
serde_with = "3.11.0"